--- a/style.css
+++ b/style.css
@@ -17,6 +17,17 @@ body {
 	padding-left: 20px;
 }
 
-span {
-	color: Gray;
+.clear {
+	clear: both;
+}
+
+.at {
+	font-size: 26px;
+}
+
+figure {
+	margin: 0px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	float: left;
 }
