--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: WhiteSmoke;
 	
-	font-family: 'Droid Sans', sans;
+	font-family: 'Roboto', sans-serif;
 	font-size: 28px;
 	text-shadow: 1px 1px 1px #aaa;
 	
